# illixr_android

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/GLFW/utils/: hmd.hpp
app/src/main/cpp/android_cam/: plugin.cpp
app/src/main/cpp/android_imu/: plugin.cpp
app/src/main/cpp/android_imu_cam/: plugin.cpp
app/src/main/cpp/arcore/: plugin.cpp
app/src/main/cpp/cmake/: GetOpenVINS.cmake  Getspdlog.cmake
app/src/main/cpp/common/: .data_format.hpp.swp  NativeClass.h  arcore.hpp  common_lock.hpp  cpu_timer.hpp  data_format.hpp  dynamic_lib.hpp  extended_window.hpp  file_helper.h  global_module_defs.hpp  log_service.hpp  math_util.hpp  phonebook.hpp  plugin.hpp  record_logger.hpp  relative_clock.hpp  runtime.hpp  shader_util.hpp  switchboard.hpp  threadloop.hpp
app/src/main/cpp/common/gl_util/: obj.hpp
app/src/main/cpp/common_lock/: plugin.cpp
app/src/main/cpp/faux_pose/: plugin.cpp  plugin.h
app/src/main/cpp/gldemo/: parser.py  plugin.cpp
app/src/main/cpp/gldemo/shaders/: demo_shader.hpp
app/src/main/cpp/gtsam_integrator/: plugin.cpp
app/src/main/cpp/include/illixr/: common_lock.hpp  cpu_timer.hpp  csv_iterator.hpp  data_loading.hpp  dynamic_lib.hpp  error_util.hpp  global_module_defs.hpp  hmd.hpp  log_service.hpp  logger.hpp  managed_thread.hpp  math_util.hpp  phonebook.hpp  plugin.hpp  record_logger.hpp  runge-kutta.hpp  runtime.hpp  shader_util.hpp  switchboard.hpp  threadloop.hpp
app/src/main/cpp/include/illixr/data_format/: camera_data.hpp  frame.hpp  hand_tracking_data.hpp  imu.hpp  misc.hpp  opencv_data_types.hpp  point.hpp  pose.hpp  pose_prediction.hpp  proper_quaternion.hpp  shape.hpp  template.hpp  unit.hpp
app/src/main/cpp/include/illixr/gl_util/: obj.hpp
app/src/main/cpp/include/illixr/gl_util/lib/: stb_image.h
app/src/main/cpp/include/illixr/shaders/: demo_shader.hpp
app/src/main/cpp/log_service/: plugin.cpp
app/src/main/cpp/offline_cam/: data_loading.hpp  plugin.cpp
app/src/main/cpp/offline_imu/: data_loading.hpp  plugin.cpp
app/src/main/cpp/offline_imu_cam/: data_loading.hpp  plugin.cpp
app/src/main/cpp/open_vins/: CMakeLists.txt
app/src/main/cpp/open_vins/ov_core/src/cpi/: CpiBase.h
app/src/main/cpp/open_vins/ov_core/src/feat/: FeatureDatabase.cpp  FeatureHelper.h  FeatureInitializer.cpp  FeatureInitializerOptions.h
app/src/main/cpp/open_vins/ov_core/src/init/: InertialInitializer.cpp
app/src/main/cpp/open_vins/ov_core/src/sim/: BsplineSE3.cpp  BsplineSE3.h
app/src/main/cpp/open_vins/ov_core/src/track/: Grider_FAST.h  Grider_GRID.h  TrackAruco.cpp  TrackAruco.h  TrackBase.cpp  TrackBase.h  TrackDescriptor.cpp  TrackKLT.cpp  TrackSIM.cpp  TrackSIM.h
app/src/main/cpp/open_vins/ov_core/src/types/: IMU.h  JPLQuat.h  Landmark.h  PoseJPL.h
app/src/main/cpp/open_vins/ov_core/src/utils/: CLI11.hpp  opencv_yaml_parse.h
app/src/main/cpp/open_vins/ov_init/src/dynamic/: DynamicInitializer.cpp  DynamicInitializer.h
app/src/main/cpp/open_vins/ov_init/src/init/: InertialInitializer.cpp  InertialInitializer.h  InertialInitializerOptions.h
app/src/main/cpp/open_vins/ov_init/src/static/: StaticInitializer.cpp  StaticInitializer.h
app/src/main/cpp/open_vins/ov_init/src/utils/: helper.h
app/src/main/cpp/open_vins/ov_msckf/src/: run_illixr_msckf.cpp  slam2.cpp
app/src/main/cpp/open_vins/ov_msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerHelper.cpp  VioManagerOptions.h
app/src/main/cpp/open_vins/ov_msckf/src/sim/: Simulator.h
app/src/main/cpp/open_vins/ov_msckf/src/state/: State.h  (+5 more)
app/src/main/cpp/plugins/android_cam/: CMakeLists.txt  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/android_data/: CMakeLists.txt  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/android_imu/: CMakeLists.txt  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/android_imu_cam/: CMakeLists.txt  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/gldemo/: CMakeLists.txt  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/gldemo/shaders/: demo_shader.hpp
app/src/main/cpp/plugins/gtsam_integrator/: CMakeLists.txt  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/offline_cam/: CMakeLists.txt  data_loading.hpp  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/offline_imu/: CMakeLists.txt  data_loading.hpp  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/offline_imu_cam/: CMakeLists.txt  csv_iterator.hpp  data_loading.hpp  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/rk4_integrator/: CMakeLists.txt  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/timewarp_gl/: CMakeLists.txt  plugin.cpp  plugin.hpp
app/src/main/cpp/plugins/timewarp_gl/shaders/: basic_shader.hpp  timewarp_shader.hpp
app/src/main/cpp/pose_lookup/: data_loading.hpp  plugin.cpp  utils.hpp
app/src/main/cpp/pose_prediction/: plugin.cpp
app/src/main/cpp/rk4_integrator/: plugin.cpp
app/src/main/cpp/runtime/: data_format.cpp  main.cpp  main.h  runtime_impl.hpp
app/src/main/cpp/sample/: sample.cpp
app/src/main/cpp/services/common_lock/: CMakeLists.txt  plugin.cpp  service.cpp  service.hpp
app/src/main/cpp/services/extended_window/: CMakeLists.txt  service.cpp  service.hpp
app/src/main/cpp/services/faux_pose/: CMakeLists.txt
app/src/main/cpp/services/fauxpose/: CMakeLists.txt  service.cpp  service.hpp
app/src/main/cpp/services/log_service/: CMakeLists.txt  plugin.cpp  service.cpp  service.hpp
app/src/main/cpp/services/pose_lookup/: CMakeLists.txt  csv_iterator.hpp  data_loading.hpp  service.cpp  service.hpp  utils.hpp
app/src/main/cpp/services/pose_prediction/: CMakeLists.txt  service.cpp  service.hpp
app/src/main/cpp/src/: CMakeLists.txt  illixr.hpp  main.cpp  plugin.cpp  runtime_impl.cpp  runtime_impl.hpp  sqlite_record_logger.hpp  stdout_record_logger.hpp
app/src/main/cpp/src/sqlite3pp/: sqlite3pp.hpp  sqlite3pp_interface.hpp
app/src/main/cpp/timewarp_gl/: plugin.cpp
app/src/main/cpp/timewarp_gl/shaders/: basic_shader.hpp  timewarp_shader.hpp
app/src/main/cpp/timewarp_gl/utils/: hmd.hpp
app/src/main/cpp/utils/: CMakeLists.txt  hmd.cpp  hmd.hpp
(+15 files in other folders)
